# ikos

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS.md  LICENSE.txt  README.md  RELEASE_NOTES.md  TROUBLESHOOTING.md
abs-repr/: CMakeLists.txt  README.md
abs-repr/docs/: AR_SPEC.md
abs-repr/docs/doxygen/: Doxyfile.in  customdoxygen.css
abs-repr/include/arbos/common/: bignums.hpp  common.hpp  types.hpp
abs-repr/include/arbos/io/: s_expressions.hpp
abs-repr/include/arbos/semantics/: ar.hpp  builders.hpp  fp.hpp
abs-repr/src/arbos/: arbos.cpp
abs-repr/src/arbos/api/: ar.cpp  ar_factory.cpp  ar_visitor.cpp
abs-repr/src/passes/dumps/: print.cpp
abs-repr/src/passes/examples/: CMakeLists.txt  hello.cpp  options.cpp  visitor.cpp
abs-repr/tests/regression/: CMakeLists.txt
abs-repr/tests/regression/tests/: CMakeLists.txt
abs-repr/tests/regression/utils/: test_config.sh
abs-repr/tests/regression/verifier-passes/: CMakeLists.txt
analyzer/: CMakeLists.txt  README.md
analyzer/doc/doxygen/: Doxyfile.in
analyzer/doc/doxygen/latex/: biblio.bib  overview.tex
analyzer/docs/: FORMAT_JSON.md  RELEASE_NOTES.md
analyzer/docs/doxygen/: Doxyfile.in  intro
analyzer/include/analyzer/: cast.hpp  config.hpp
analyzer/include/analyzer/analysis/: call_graph_topology.hpp  common.hpp  context.hpp  function_pointer.hpp  inliner.hpp  liveness.hpp  loop_counters.hpp  memory_location.hpp  num_sym_exec.hpp  pointer.hpp  summary.hpp  sym_exec_api.hpp  sym_exec_warning_callbacks.hpp  variable_name.hpp
analyzer/include/analyzer/ar-wrapper/: aggregate_literal.hpp  call_graph.hpp  cfg.hpp  constant_folding.hpp  graph.hpp  literal.hpp  transformations.hpp  wrapper.hpp
analyzer/include/analyzer/checkers/: assert_prover_checker.hpp  buffer_overflow_checker.hpp  checker_api.hpp  division_by_zero_checker.hpp  null_dereference_checker.hpp  pointer_alignment_checker.hpp  uninitialized_variable_checker.hpp
analyzer/include/analyzer/domains/: array_graph.hpp  summary_domain.hpp  uninitialized_array.hpp  value_domain.hpp
analyzer/include/analyzer/examples/: muaz.hpp
analyzer/include/analyzer/ikos-wrapper/: domains_traits.hpp  iterators.hpp
analyzer/include/analyzer/utils/: analysis_db.hpp  demangle.hpp  json.hpp  json_helpers.hpp  sqlite_api.hpp  stats.hpp
analyzer/include/ikos/analyzer/: exception.hpp  intrinsic.h
analyzer/python/: settings.cmake.in  setup.py.in
analyzer/python/ikos/: abs_int.py  analyzer.py  args.py  colors.py  demangle.py  enums.py  filetype.py  highlight.py  html.py  http.py  log.py  output_db.py  render.py  report.py  scan.py  settings.py.in  stats.py  view.py
analyzer/script/: ikos-config.py.in  ikos-report.py.in  ikos-scan-c++.py.in  ikos-scan-cc.py.in  ikos-scan-extract.py.in  ikos-scan.py.in  ikos-view.py.in  ikos.py.in
analyzer/scripts/: ikos  ikos-config.py.in  ikos-render.py.in  ikos.py.in  ikosview.py  out.py  stats.py  version.cmake.in  version.py.in
analyzer/src/: exception.cpp  ikos_analyzer.cpp
analyzer/src/analysis/: call_context.cpp  fixpoint_parameters.cpp  fixpoint_profile.cpp  hardware_addresses.cpp  literal.cpp  liveness.cpp  memory_location.cpp  option.cpp  variable.cpp  widening_hint.cpp
analyzer/src/analysis/pointer/: constraint.cpp  function.cpp  pointer.cpp  value.cpp
analyzer/src/analysis/value/: abstract_domain.cpp  global_variable.cpp  interprocedural.cpp  intraprocedural.cpp  machine_int_domain.cpp
analyzer/src/ar-passes/: add_loop_counters.cpp  analyzer.cpp  ar_to_dot.cpp  branching_opt.cpp  cpa.cpp  inline_init_gv.cpp  pointer_shift_opt.cpp  reaching.cpp  unify_exit_nodes.cpp
analyzer/src/checker/: assert_prover.cpp  buffer_overflow.cpp  checker.cpp  dead_code.cpp  debug.cpp  division_by_zero.cpp  double_free.cpp  function_call.cpp  int_overflow_base.cpp  memory_watch.cpp  null_dereference.cpp  pointer_alignment.cpp  pointer_compare.cpp  pointer_overflow.cpp  shift_count.cpp  signed_int_overflow.cpp  soundness.cpp  uninitialized_variable.cpp  unsigned_int_overflow.cpp
analyzer/src/database/: output.cpp  sqlite.cpp  table.cpp
analyzer/src/database/table/: call_contexts.cpp  checks.cpp  files.cpp  functions.cpp  memory_locations.cpp  operands.cpp  settings.cpp  statements.cpp  times.cpp
analyzer/src/json/: json.cpp
analyzer/src/util/: color.cpp  log.cpp  progress.cpp  source_location.cpp  timer.cpp
analyzer/test/regression/: CMakeLists.txt  libruntest.py  runalltests
analyzer/test/regression/boa/: astree-ex.c  runtest  test-1.c  test-10-unsafe.c  test-11-unsafe.c  test-11.c  test-12-unsafe.c  test-14.c  test-15.c  test-17.c  test-18-unsafe.c  test-18.c  test-19a.c  test-19b.c  test-2-unsafe.c  test-20.c  test-21.c  test-22-unsafe.c  test-23-safe.c  test-23-unsafe-2.c  test-23-unsafe-3.c  test-24-safe.c  test-25.c  test-26-volatile-safe.c  test-26-volatile-unsafe.c  test-27.c  test-28.c  test-29.c  test-3.c  test-30-use-after-free.c  test-31-use-after-free.c  test-32-use-after-return.c  test-34.c  test-35.c  test-36.c  test-37.c  test-38-argv.c  test-39.c  test-40.c  test-41.c  (+43 more)
analyzer/test/regression/dbz/: runtest  test-1-unsafe.c  (+3 more)
analyzer/tests/unit/: CMakeLists.txt
ar/: CMakeLists.txt  README.md
ar/doc/doxygen/: Doxyfile.in  mainpage.dox
ar/src/format/: dot.cpp  namer.cpp  text.cpp
ar/src/pass/: add_loop_counters.cpp  add_partitioning_variables.cpp  name_values.cpp  pass.cpp  simplify_cfg.cpp  simplify_upcast_comparison.cpp  unify_exit_nodes.cpp
ar/src/semantic/: bundle.cpp  code.cpp  context.cpp  context_impl.cpp  context_impl.hpp  data_layout.cpp  function.cpp  intrinsic.cpp  statement.cpp  type.cpp  value.cpp
ar/src/verify/: frontend.cpp  type.cpp
core/: CMakeLists.txt  README.md
core/doc/doxygen/: Doxyfile.in  mainpage.dox
core/docs/doxygen/: Doxyfile.in
core/include/ikos/: assert.hpp  exception.hpp  number.hpp
core/test/unit/: .clang-tidy  CMakeLists.txt
core/tests/unit/: CMakeLists.txt  README.md
frontend/llvm/: CMakeLists.txt  README.md
frontend/llvm/src/: ikos_import.cpp  ikos_pp.cpp
frontend/llvm/test/: runtest-sv-benchmarks
(+1528 files in other folders)
